fixe last item not visible properly

--- a/expense-tracker-mobile/src/app/modules/expense/expense-listing/expense-listing.page.scss
+++ b/expense-tracker-mobile/src/app/modules/expense/expense-listing/expense-listing.page.scss
@@ -77,6 +77,6 @@ page-expense-listing {
     }
 
     ion-content {
-
+        --padding-bottom: 70px;
     }
 }
